# AI-Campus-Admin-Agent

./: .env.example  Campus_Admin_Agent_API.postman_collection.json  README.md  SETUP_GUIDE.md  agent.py  agent_sdk.py  db.py  env_template.txt  main.py  models.py  pyproject.toml  routes.py  run_server.py  seed_data.py  tools.py
backend/: agent.py  agent_gemini_fixed.py  analytics_router.py  auth_utils.py  chat_router.py  config.py  db.py  main.py  models.py  rag_agent.py  student_router.py  tools.py
