[project]
name = "ai-campus-admin-agent"
version = "1.0.0"
description = "AI Final Hackathon project build with FastAPI and OpenAI Agent SDK"
authors = [
    {name = "Ghulam Mustfa",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.117.1,<0.118.0)",
    "uvicorn[standard] (>=0.36.0,<0.37.0)",
    "pymongo (>=4.15.1,<5.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "openai (>=1.40.0)",
    "openai-agents (>=0.3.1,<0.4.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pyjwt (>=2.8.0,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-jose[cryptography] (>=3.3.0,<4.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "langgraph (>=0.6.7,<0.7.0)",
    "pymupdf (>=1.26.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
